--- a/HTTPS4All/Base.lproj/Main.storyboard
+++ b/HTTPS4All/Base.lproj/Main.storyboard
@@ -27,38 +27,29 @@
             </objects>
             <point key="canvasLocation" x="-1294" y="67"/>
         </scene>
-        <!--HTTPS All The Things-->
+        <!--HTTPS4All-->
         <scene sceneID="ecL-Gu-D3H">
             <objects>
-                <viewController title="HTTPS All The Things" id="036-BS-57a" sceneMemberID="viewController">
+                <viewController title="HTTPS4All" id="036-BS-57a" customClass="ViewController" customModule="HTTPS4All" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fsp-jA-fJ5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="top" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="AfF-68-tJc">
-                                <rect key="frame" x="20" y="20" width="335" height="71.5"/>
+                                <rect key="frame" x="0.0" y="20" width="0.0" height="61"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are now protected!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLr-wk-gyq">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLr-wk-gyq">
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="left" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8XD-Vm-VP1">
-                                        <rect key="frame" x="0.0" y="40.5" width="335" height="31"/>
-                                        <subviews>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="00H-Mw-grc">
-                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
-                                            </switch>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable mixed-content hosts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0gf-ke-OBc">
-                                                <rect key="frame" x="69" y="5.5" width="266" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5f-IT-Ypw" userLabel="Version Label">
+                                        <rect key="frame" x="0.0" y="40.5" width="0.0" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <viewLayoutGuide key="safeArea" id="QQP-U1-XA8"/>
                             </stackView>
@@ -72,7 +63,11 @@
                         <viewLayoutGuide key="safeArea" id="aHU-hF-VK7"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <navigationItem key="navigationItem" title="HTTPS All The Things" id="nQa-mL-h4q"/>
+                    <navigationItem key="navigationItem" title="HTTPS4All" id="nQa-mL-h4q"/>
+                    <connections>
+                        <outlet property="updateLabel" destination="uLr-wk-gyq" id="YiQ-Wl-mt7"/>
+                        <outlet property="versionLabel" destination="x5f-IT-Ypw" id="Oev-2C-NdF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZSx-Rf-d9F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
